Updates from Overleaf

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -23,7 +23,7 @@ MP apps
 \subsection{{Lead Data Scientist \hfill 12-2018 --- 10-2019}}
 \subtext{Volt Lines \hfill Istanbul, Turkey}
 \begin{zitemize}
-\item Turn company from the business-based approach to the data-driven-based approach. Introduce the SMACK stack \href{https://medium.com/@cenk.bircanoglu/an-overview-of-data-pipeline-at-volt-lines-3743e15038cc}{Blog Post}
+\item Turn the company from the business-based approach to the data-driven-based approach. Introduce the SMACK stack \href{https://medium.com/@cenk.bircanoglu/an-overview-of-data-pipeline-at-volt-lines-3743e15038cc}{Blog Post}
 \item Gamification to make drivers use the app.
 \item Daily, weakly, and monthly reports.
 \item Build an automated and intelligent routing for services.
@@ -63,7 +63,7 @@ communication skills to provide project reviews and other student support.
 \subsection{{Software Developer/Data Scientist \hfill 09-2013 --- 03-2017}}
 \subtext{Sekom Software \hfill Istanbul, Turkey}
 \begin{zitemize}
-\item Data collection from network equipments and Basic Data Science-based solutions.
+\item Data collection from network types of equipment and Basic Data Science-based solutions.
 \item Scheduled workflows on Big Data Environment. (Apache Hadoop, Apache Pig, Apache Kafka, Hive..) 
 \item Alert prediction on monitoring data.
 \end{zitemize}
